# temelio

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  implementation.md  manage.py  pyproject.toml
nonprofits/: models.py  seed_data.py  serializers.py  tasks.py  urls.py  views.py
nonprofits/migrations/: 0001_initial.py
temelioproj/: asgi.py  settings.py  urls.py  wsgi.py
